--- a/src/components/Diagram/Diagram-bar.css
+++ b/src/components/Diagram/Diagram-bar.css
@@ -20,7 +20,7 @@
 .diagram-bar__fill {
   background-color: #bd8025;
   width: 100%;
-  transition: all 0.3s ease-out;
+  transition: all .5s ease-out;
 }
 
 .diagram-bar__label {
