--- a/src/components/Costs/Cost-item.css
+++ b/src/components/Costs/Cost-item.css
@@ -35,6 +35,21 @@
     border-radius: 12px;
 }
 
+.cost-item__btn-wrapper{
+    padding: 0px 20px;
+}
+.cost-item__btn-wrapper button {
+    font-size: 18px;
+    cursor: pointer;
+    padding: 5px 15px;
+    border: 1px solid #fff;
+    background-color: #BD3E35;
+    color: #fefae1;
+    border-radius: 10px;
+}
+.cost-item__btn-wrapper button+button {
+    margin-left: 5px;
+}
 @media (min-width: 580px) {
     .cost-item__description {
         flex-direction: row;
