--- a/src/components/Costs/Cost-item.css
+++ b/src/components/Costs/Cost-item.css
@@ -9,17 +9,14 @@
 
 .cost-item__description {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: flex-end;
-    flex-flow: column-reverse;
-    justify-content: flex-start;
+    /*gap: 1rem;*/
+    align-items: center;
     flex: 1;
 }
 
 .cost-item h2 {
     color: #3a3a3a;
-    font-size: 1rem;
+    font-size: 1.4rem;
     flex: 1;
     margin: 0 1rem;
     color: #fefae1;
@@ -30,7 +27,6 @@
     font-weight: bold;
     color: #fefae1;
     background-color: #2a5b84;
-    border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
 }
@@ -39,10 +35,11 @@
     padding: 0px 20px;
 }
 .cost-item__btn-wrapper button {
+    border: none;
+    outline: none;
     font-size: 18px;
     cursor: pointer;
     padding: 5px 15px;
-    border: 1px solid #fff;
     background-color: #BD3E35;
     color: #fefae1;
     border-radius: 10px;
@@ -50,11 +47,11 @@
 .cost-item__btn-wrapper button+button {
     margin-left: 5px;
 }
-@media (min-width: 580px) {
+@media (max-width: 580px) {
     .cost-item__description {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         flex: 1;
     }
 
@@ -65,5 +62,6 @@
     .cost-item__price {
         font-size: 1.25rem;
         padding: 0.5rem 1.5rem;
+        background-color: inherit;
     }
 }
